# CppConcurrencyPatterns

./: LICENSE  README.md
ActiveObject/: CMakeLists.txt  README.md  activeObject.cpp
CopiedValue/: CMakeLists.txt  README.md  copiedValueDataRace.cpp
EventLoop/AccessSerialization/: CMakeLists.txt  event_loop.hpp  i_bank_account.hpp  main.cpp  thread_safe_account.hpp  thread_unsafe_account.hpp
EventLoop/Basic/: CMakeLists.txt  event_loop.hpp  main.cpp
EventLoop/EventHandlers/: CMakeLists.txt  main.cpp
Future/: CMakeLists.txt  README.md  future.cpp
GuardedSuspension/: CMakeLists.txt  README.md  bossWorker.cpp
LockFree/: README.md
LockFree/AtomicSharedPointerStack/: CMakeLists.txt  main.cpp
LockFree/AtomicSmartPointerStack/: CMakeLists.txt  main.cpp
LockFree/Benchmark/: CMakeLists.txt  main.cpp
LockFree/CompleteStack/: CMakeLists.txt  main.cpp
LockFree/HazardPointerStack/: CMakeLists.txt  main.cpp
LockFree/SPSCQueue/: CMakeLists.txt  main.cpp
LockFree/SimpleStack/: CMakeLists.txt  main.cpp
MonitorObject/: README.md
MonitorObject/Cpp11/: CMakeLists.txt  monitorObject.cpp
MonitorObject/Cpp20/: CMakeLists.txt  monitorObjectCpp20.cpp
OpenMP/: README.md
OpenMP/Cancellation/: CMakeLists.txt  main.cpp
OpenMP/CriticalSection/: CMakeLists.txt  main.cpp
OpenMP/ForLoop/: CMakeLists.txt  main.cpp
OpenMP/Historgram/: CMakeLists.txt  main.cpp
OpenMP/PrivateVariables/: CMakeLists.txt  main.cpp
OpenMP/Reduction/: CMakeLists.txt  main.cpp
OpenMP/ReductionJoin/: CMakeLists.txt  main.cpp
OpenMP/ReductionSum/: CMakeLists.txt  main.cpp
OpenMP/Reductions/: CMakeLists.txt  main.cpp
OpenMP/Task/: CMakeLists.txt  main.cpp
OpenMP/ThreadNum/: CMakeLists.txt  main.cpp
ProducerConsumer/: README.md
ProducerConsumer/first_readers_writers/: CMakeLists.txt  main.cpp
ProducerConsumer/mpsc_queue_test/: CMakeLists.txt  README.md  mpsc_queue.h  mpsc_queue_test.cpp
ProducerConsumer/producer_consumer_bounded_buffer/: CMakeLists.txt  main.cpp
ProducerConsumer/producer_consumer_channel/: CMakeLists.txt  channel.cpp  channel.hpp  channel.tpp  main.cpp  selector.cpp  selector.hpp
ProducerConsumer/producer_consumer_channel_2/: CMakeLists.txt  blocking_iterator.hpp  channel.hpp  channel.inl  main.cpp
ProducerConsumer/producer_consumer_monitor/: CMakeLists.txt  main.cpp
ProducerConsumer/producer_consumer_single/: CMakeLists.txt  main.cpp
ProducerConsumer/producer_consumer_single_c/: CMakeLists.txt  main.c
ProducerConsumer/second_readers_writers/: CMakeLists.txt  main.cpp
ProducerConsumer/second_readers_writers_c/: CMakeLists.txt  main.c
ProducerConsumer/simplest_readers_writers/: CMakeLists.txt  main.cpp
ProducerConsumer/spsc_daugaard/v1/: CMakeLists.txt  RingBuffer_v1.hpp  main.cpp
ProducerConsumer/spsc_daugaard/v2/: CMakeLists.txt  RingBuffer_v2.hpp  sema.h
ProducerConsumer/spsc_daugaard/v2_std_semaphore/: CMakeLists.txt  RingBuffer_v2.hpp  main.cpp
ProducerConsumer/third_readers_writers/: CMakeLists.txt  main.cpp
Reactor/: README.md
Reactor/Cpp11/: CMakeLists.txt  reactor.cpp
Reactor/Cpp11queue/: CMakeLists.txt  README.md  reactor.cpp
Reactor/Cpp98/: CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  Dispatcher.cpp  Dispatcher.h  EpollPoller.cpp  EpollPoller.h  EventHandler.h  ListenHandler.cpp  ListenHandler.h  Poller.h  README.md  main.cpp  main_client.cpp
Reactor/Poco/: CMakeLists.txt  main.cpp
ScopedLocking/: CMakeLists.txt  README.md  scopedLock.cpp
SeqLock/: README.md
SeqLock/seqlock_emulator/: CMakeLists.txt  Seqlock.hpp  main.cpp  test.cpp
SeqLock/seqlock_mutex_emulator/: CMakeLists.txt  Seqlock.hpp  main.cpp  test.cpp
SeqLock/seqlock_naive/: CMakeLists.txt  Seqlock.hpp
SeqLock/seqlock_posix_emulator/: CMakeLists.txt  Seqlock.hpp
SeqLock/seqlock_rigtorp/: CMakeLists.txt  main.cpp  test.cpp
SeqLock/seqlock_rigtorp/rigtorp/: Seqlock.hpp
SeqLock/seqlock_spinlock/: CMakeLists.txt  Seqlock.hpp  SpinLock.cpp  SpinLock.hpp
Spinlock/: README.md
Spinlock/audio_spin_mutex/: CMakeLists.txt  main.cpp
Spinlock/benchmarks/: CMakeLists.txt  README.md  conanfile.txt  main.cpp
Spinlock/spinlock_atomic_bool/: CMakeLists.txt  main.cpp
Spinlock/spinlock_atomic_flag/: CMakeLists.txt  main.cpp
Spinlock/spinlock_atomic_flag_c/: CMakeLists.txt  main.c
Spinlock/spinlock_posix_c/: CMakeLists.txt  main.c
StrategizedLocking/: README.md
StrategizedLocking/Concepts/: CMakeLists.txt  strategizedLockingCompileTimeWithConcepts.cpp
StrategizedLocking/Runtime/: CMakeLists.txt  strategizedLockingRuntime.cpp
ThreadSafeInterface/: CMakeLists.txt  README.md  threadSafeInterface.cpp
ThreadSpecificStorage/: CMakeLists.txt  README.md  threadLocalSummation.cpp
